hphp/test/slow/ext_xml/T87354430.php.expectf

Catchable fatal error: Argument 1 to XMLReader::expand() must be of type ?DOMNode, stdClass given in %s on line 5
